fix(ci): resolve GDAL version compatibility issues
- Constrain GDAL version to <3.10.0 in pyproject.toml to match Ubuntu 22.04 system GDAL 3.8.4
- Simplify CI workflow GDAL installation by removing redundant steps
- Verify GDAL installation in CI workflow for debugging

Resolves CI pipeline failures with GDAL version mismatch between system and Python package requirements.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,11 @@ jobs:
       - name: Install system dependencies for GeoPandas
         run: |
           sudo apt-get update
-          sudo apt-get install -y gdal-bin libgdal-dev gcc g++
-
+          sudo apt-get install -y gdal-bin libgdal-dev gcc g++ pkg-config
+          
+          # Verify GDAL installation
+          gdal-config --version
+          
       - name: Install dependencies
         run: uv sync --all-extras
 
