--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dependencies = [
     "shapely>=2.0.0",
     "fiona>=1.9.0",
     "pyproj>=3.6.0",
-    "gdal>=3.7.0",
+    "gdal>=3.4.0,<3.10.0",
     
     # LLM Integration
     "langchain>=0.1.0",
