--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,8 +130,9 @@ jobs:
       - name: Set up Python
         run: uv python install 3.11
 
-      - name: Install only pip-audit (skip GDAL dependencies)
+      - name: Create virtual environment and install pip-audit
         run: |
+          uv venv
           uv pip install pip-audit
 
       - name: Run security audit on core packages
