fix(ci): use correct pip-audit command syntax
- Change 'uv pip audit' to 'uv run pip-audit'
- uv pip doesn't have audit subcommand, need to use uv run

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,7 +142,7 @@ jobs:
           echo "uvicorn" >> temp-requirements.txt
           echo "pydantic" >> temp-requirements.txt
           echo "sqlmodel" >> temp-requirements.txt
-          uv pip audit --requirement temp-requirements.txt
+          uv run pip-audit --requirement temp-requirements.txt
 
       - name: Upload security report (optional)
         if: always()
