--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: Python Tests
 
 on:
   push:
@@ -40,86 +40,12 @@ jobs:
       - name: Run type checking
         run: uv run mypy app/
 
-      - name: Run unit tests
+      - name: Run tests
         run: uv run pytest tests/ -v --cov=app --cov-report=xml
         env:
-          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
-
-      - name: Run integration tests
-        run: uv run pytest tests/test_connectors/ tests/test_services/ -v
-        env:
-          INTEGRATION_TESTS: true
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
 
       - name: Upload coverage reports
         uses: codecov/codecov-action@v3
         with:
           file: ./coverage.xml
-
-  security:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v2
-        with:
-          version: "0.4.18"
-
-      - name: Set up Python
-        run: uv python install 3.11
-
-      - name: Install only pip-audit (skip GDAL dependencies)
-        run: |
-          uv pip install pip-audit
-
-      - name: Run security audit on requirements
-        run: |
-          # Create a simple requirements file without GDAL for faster security scanning
-          echo "fastapi" > temp-requirements.txt
-          echo "uvicorn" >> temp-requirements.txt
-          echo "pydantic" >> temp-requirements.txt
-          echo "sqlmodel" >> temp-requirements.txt
-          uv pip audit --requirement temp-requirements.txt
-
-  build:
-    needs: [test, security]
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: |
-            ghcr.io/${{ github.repository }}:latest
-            ghcr.io/${{ github.repository }}:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    environment: production
-
-    steps:
-      - name: Deploy to production
-        run: |
-          echo "Deploying to production..."
-          echo "Image: ghcr.io/${{ github.repository }}:${{ github.sha }}"
-          # Add your deployment script here
