--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,36 +23,31 @@ dependencies = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
     "jinja2>=3.1.2",
-    
     # Database & ORM
     "sqlmodel>=0.0.14",
     "sqlalchemy>=2.0.0",
     "alembic>=1.13.0",
-    
     # Geodata Processing
     "geopandas>=0.14.0",
     "shapely>=2.0.0",
     "fiona>=1.9.0",
     "pyproj>=3.6.0",
     "gdal>=3.4.0,<3.10.0",
-    
     # LLM Integration
     "langchain>=0.1.0",
     "langchain-google-genai>=1.0.0",
     "google-generativeai>=0.3.0",
-    
     # Data Handling
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
     "pandas>=2.1.0",
-    
     # HTTP Client
     "httpx>=0.25.0",
-    
     # Utilities
     "python-multipart>=0.0.6",
     "python-dotenv>=1.0.0",
     "structlog>=23.2.0",
+    "tenacity>=9.1.2",
 ]
 
 [project.optional-dependencies]
