--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,6 +109,27 @@ dev-dependencies = [
     "types-requests>=2.31.0",
     "ipython>=8.17.0",
     "ipykernel>=6.26.0",
+    "pandas-stubs>=2.3.2.250827",
+    "types-pyyaml>=6.0.12.20250822",
+    "types-pygments>=2.19.0.20250809",
+    "types-beautifulsoup4>=4.12.0.20250516",
+    "types-cachetools>=6.2.0.20250827",
+    "types-cffi>=1.17.0.20250822",
+    "types-colorama>=0.4.15.20250801",
+    "types-decorator>=5.2.0.20250324",
+    "types-defusedxml>=0.7.0.20250822",
+    "types-greenlet>=3.2.0.20250809",
+    "types-httplib2>=0.31.0.20250913",
+    "types-jsonschema>=4.25.1.20250822",
+    "types-pexpect>=4.9.0.20250809",
+    "types-protobuf>=6.30.2.20250822",
+    "types-psutil>=7.0.0.20250822",
+    "types-pyopenssl>=24.1.0.20240722",
+    "types-pyasn1>=0.6.0.20250516",
+    "types-pycurl>=7.45.6.20250801",
+    "types-tqdm>=4.67.0.20250809",
+    "types-ujson>=5.10.0.20250822",
+    "lxml-stubs>=0.5.1",
 ]
 
 # Ruff Configuration
