feat(security): enhance google api key validation and protection
- Add SecretStr type for secure API key handling in configuration
- Implement comprehensive API key validation with minimum length check
- Add startup validation preventing application launch with invalid keys
- Update NLP and Metadata services with SecretStr compatibility
- Enhance .env.example documentation with API key requirements
- Maintain backward compatibility for existing test mocks

This improves security by preventing API key leakage in logs and
ensuring only valid keys are accepted at application startup.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 # Database Configuration
 DATABASE_URL=sqlite:///./geodaten_assistent.db
 
-# Google Gemini API Key (REQUIRED)
+# Google Gemini API Key (REQUIRED for NLP and Metadata services)
+# Get your API key from: https://makersuite.google.com/app/apikey
+# Minimum 20 characters required for validation
 GOOGLE_API_KEY=your-gemini-api-key-here
 
 # Logging Configuration
