fix: resolve all linting and type checking issues
- Remove unused variables in metadata service and test files
- Fix undefined correlation_ids references in test_data_sources.py
- Configure ruff to ignore unused test method arguments (ARG002)
- Add type ignore comments for OpenAI API key compatibility
- Ensure all CI checks pass: linting, formatting, and type checking

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -166,6 +166,7 @@ ignore = [
 [tool.ruff.lint.per-file-ignores]
 "tests/**/*.py" = [
     "ARG001",  # unused function argument in tests
+    "ARG002",  # unused method argument in tests
     "S101",    # use of assert in tests
 ]
 
