feat: complete codebase cleanup and university submission preparation
- Created comprehensive README.md with installation, usage, and academic context
- Removed all Gemini API references and updated to OpenAI GPT integration
- Cleaned up GitHub secrets setup dependencies
- Updated test fixtures and configuration for OpenAI
- Archived outdated development documentation
- Enhanced documentation consistency across all service modules
- Simplified environment setup with direct .env configuration

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,20 @@
-# Database Configuration
+# .env.example
+
+# Application Configuration
+APP_NAME=urbaniq
+APP_VERSION=0.1.0
+ENVIRONMENT=development
+
+# Database
 DATABASE_URL=sqlite:///./data/urbaniq.db
 
-# OpenAI API Key (REQUIRED for NLP and Metadata services)
-# Get your API key from: https://platform.openai.com/api-keys
-# Should start with 'sk-' and be ~51 characters
-OPENAI_API_KEY=sk-your-openai-api-key-here
+# OpenAI API Integration
+OPENAI_API_KEY=your-openai-api-key-here
 
-# Logging Configuration
-LOG_LEVEL=INFO
-
-# File Storage Paths
-TEMP_DIR=./data/temp
-EXPORT_DIR=./data/exports
-CACHE_DIR=./data/cache
-
-# Development Settings
+# Server Configuration
+HOST=127.0.0.1
+PORT=8000
 DEBUG=true
-RELOAD=true
 
-# CORS Origins (if needed)
-CORS_ORIGINS=["http://localhost:3000","http://localhost:8080"]
-
-# Production Database (for production deployment)
-# DATABASE_URL=postgresql://user:password@localhost/urbaniq
+# Logging
+LOG_LEVEL=INFO
