--- a/pyproject.toml
+++ b/pyproject.toml
@@ -199,8 +199,7 @@ module = [
     "gdal.*",
     "pyproj.*",
     "langchain.*",
-    "langchain_google_genai.*",
-    "google.generativeai.*",
+    "langchain_openai.*",
 ]
 ignore_missing_imports = true
 
