--- a/.gitignore
+++ b/.gitignore
@@ -129,5 +129,7 @@ dmypy.json
 .claude/
 ai-doc/
 PRP/
+PRESENTATION.md
+doc/IMPLEMENTATION_ROADMAP.md
 
 # Documentation (doc/ and CHANGELOG.md are included in git)
